# YOLOv8_RDKX5_object_detect

./: CMakeLists.txt  README.md
rdk_lib/: libalog.so.1  libcnn_intf.so.1.3.6  libhbmem.so.1
src/: main.cc
